Bug 230357 - Conditional jump or move depends on uninitialised value when editing filters
Summary: Conditional jump or move depends on uninitialised value when editing filters
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-11 20:37 UTC by Albert Astals Cid
Modified: 2011-09-14 15:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2010-03-11 20:37:38 UTC
Version:            (using KDE 4.4.1)
Installed from:    Compiled From Sources

How to reproduce:
 * Open KMail
 * Go to Settings->Configure filters
 * Choose an existing filter (i'm choosing the 5th of lots)
 * Edit the contains part (was <asolif.asolif.es> changed to <asolif.asolif.org>)
 * See how valgrind complains

==5399== Conditional jump or move depends on uninitialised value(s)
==5399==    at 0x5D7EC6B: KMFilterListBox::slotUpdateFilterName() (kmfilterdlg.cpp:764)
==5399==    by 0x5D8998B: KMFilterListBox::qt_metacall(QMetaObject::Call, int, void**) (kmfilterdlg.moc:99)
==5399==    by 0x7686C0E: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3293)
==5399==    by 0x5D58DE5: KMSearchPatternEdit::qt_metacall(QMetaObject::Call, int, void**) (kmsearchpatternedit.moc:228)
==5399==    by 0x7686C0E: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3293)
==5399==    by 0x5D56174: KMSearchRuleWidget::contentsChanged(QString const&) (kmsearchpatternedit.moc:103)
==5399==    by 0x5D57A08: KMSearchRuleWidget::slotValueChanged() (kmsearchpatternedit.cpp:222)
==5399==    by 0x5D57B7B: KMSearchRuleWidget::qt_metacall(QMetaObject::Call, int, void**) (kmsearchpatternedit.moc:83)
==5399==    by 0x7686C0E: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3293)
==5399==    by 0x5F7C7E1: KMail::RegExpLineEdit::textChanged(QString const&) (regexplineedit.moc:96)
==5399==    by 0x5F7D378: KMail::RegExpLineEdit::qt_metacall(QMetaObject::Call, int, void**) (regexplineedit.moc:80)
==5399==    by 0x7686C0E: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3293)
Comment 1 Laurent Montel 2011-09-14 14:33:12 UTC
Still valid ?:)
I don't want to launch kmail in valgrind :)
Comment 2 Christophe Marin 2011-09-14 14:45:08 UTC
with kmail from yesterday:

==17091== Conditional jump or move depends on uninitialised value(s)
==17091==    at 0x5C8F9C4: KMFilterListBox::slotUpdateFilterName() (kmfilterdlg.cpp:749)
==17091==    by 0x5C91F5F: KMFilterListBox::qt_metacall(QMetaObject::Call, int, void**) (kmfilterdlg.moc:108)
==17091==    by 0x618B3F9: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3287)
==17091==    by 0xBFC04AA: MailCommon::SearchPatternEdit::maybeNameChanged() (searchpatternedit.moc:247)
==17091==    by 0xBFBFF3F: MailCommon::SearchPatternEdit::slotAutoNameHack() (searchpatternedit.cpp:542)
==17091==    by 0xBFC0457: MailCommon::SearchPatternEdit::qt_metacall(QMetaObject::Call, int, void**) (searchpatternedit.moc:235)
==17091==    by 0x618B3F9: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3287)
==17091==    by 0xBFC0204: MailCommon::SearchRuleWidget::contentsChanged(QString const&) (searchpatternedit.moc:104)
==17091==    by 0xBFBDD50: MailCommon::SearchRuleWidget::slotValueChanged() (searchpatternedit.cpp:231)
==17091==    by 0xBFC014C: MailCommon::SearchRuleWidget::qt_metacall(QMetaObject::Call, int, void**) (searchpatternedit.moc:84)
==17091==    by 0x618B3F9: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3287)
==17091==    by 0xBFA890C: MailCommon::RegExpLineEdit::textChanged(QString const&) (regexplineedit.moc:97)
==17091==    by 0xBFA8862: MailCommon::RegExpLineEdit::qt_metacall(QMetaObject::Call, int, void**) (regexplineedit.moc:81)
==17091==    by 0x618B3F9: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3287)
==17091==    by 0x6A7ED11: QLineEdit::textChanged(QString const&) (moc_qlineedit.cpp:242)
==17091==    by 0x6A7F1CB: QLineEdit::qt_metacall(QMetaObject::Call, int, void**) (moc_qlineedit.cpp:158)
==17091==    by 0x512DB84: KLineEdit::qt_metacall(QMetaObject::Call, int, void**) (klineedit.moc:133)
==17091==    by 0x618B3F9: QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (qobject.cpp:3287)
==17091==    by 0x6CE87E4: QLineControl::textChanged(QString const&) (moc_qlinecontrol_p.cpp:134)
==17091==    by 0x6A83BCA: QLineControl::finishChange(int, bool, bool) (qlinecontrol.cpp:658)
==17091==    by 0x6A86632: QLineControl::processKeyEvent(QKeyEvent*) (qlinecontrol.cpp:1826)
==17091==    by 0x6A7AE18: QLineEdit::keyPressEvent(QKeyEvent*) (qlineedit.cpp:1668)
==17091==    by 0x512EC28: KLineEdit::keyPressEvent(QKeyEvent*) (klineedit.cpp:969)
==17091==    by 0x66CB2B9: QWidget::event(QEvent*) (qwidget.cpp:8330)
==17091==    by 0x6A7D386: QLineEdit::event(QEvent*) (qlineedit.cpp:1485)
==17091==    by 0x512D39A: KLineEdit::event(QEvent*) (klineedit.cpp:1402)
==17091==    by 0x667ABE3: QApplicationPrivate::notify_helper(QObject*, QEvent*) (qapplication.cpp:4481)
==17091==    by 0x6680165: QApplication::notify(QObject*, QEvent*) (qapplication.cpp:3940)
==17091==    by 0x5073E55: KApplication::notify(QObject*, QEvent*) (kapplication.cpp:311)
==17091==    by 0x617867B: QCoreApplication::notifyInternal(QObject*, QEvent*) (qcoreapplication.cpp:787)
==17091==    by 0x6719C88: QKeyMapper::sendKeyEvent(QWidget*, bool, QEvent::Type, int, QFlags<Qt::KeyboardModifier>, QString const&, bool, int, unsigned int, unsigned int, unsigned int, bool*) (qkeymapper_x11.cpp:1866)
==17091==    by 0x671A0FA: QKeyMapperPrivate::translateKeyEvent(QWidget*, _XEvent const*, bool) (qkeymapper_x11.cpp:1836)
==17091==    by 0x66F62E3: QApplication::x11ProcessEvent(_XEvent*) (qapplication_x11.cpp:3480)
==17091==    by 0x671EA39: QEventDispatcherX11::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (qeventdispatcher_x11.cpp:132)
==17091==    by 0x6177881: QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (qeventloop.cpp:149)
==17091==    by 0x6177A7E: QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (qeventloop.cpp:201)
==17091==    by 0x617BC46: QCoreApplication::exec() (qcoreapplication.cpp:1064)
==17091==    by 0x403525: main (main.cpp:145)
==17091==
Comment 3 Albert Astals Cid 2011-09-14 14:45:46 UTC
To be honest, who cares if i can not use filters because that makes kmail crash?
Comment 4 Laurent Montel 2011-09-14 14:48:06 UTC
Thanks Christophe

Albert update to 4.7.1 it doesn't crash (I hope :) )
Comment 5 Laurent Montel 2011-09-14 15:00:20 UTC
Git commit 2e998796c25c3486b4505eacd8e656bd6ef70114 by Montel Laurent.
Committed on 14/09/2011 at 16:59.
Pushed by mlaurent into branch 'master'.

Fix bug : Bug 230357 - Conditional jump or move depends on uninitialised value when editing filters

FIXED-IN: 4.7.2
BUG: 230357

M  +1    -0    mailcommon/mailfilter.cpp

http://commits.kde.org/kdepim/2e998796c25c3486b4505eacd8e656bd6ef70114
Comment 6 Laurent Montel 2011-09-14 15:01:05 UTC
Git commit f104c7c54a06380ffc5fdc7d2a5b155ecd843b20 by Montel Laurent.
Committed on 14/09/2011 at 16:59.
Pushed by mlaurent into branch '4.7'.

Fix bug : Bug 230357 - Conditional jump or move depends on uninitialised value when editing filters

FIXED-IN: 4.7.2
BUG: 230357
(cherry picked from commit 2e998796c25c3486b4505eacd8e656bd6ef70114)

M  +1    -0    mailcommon/mailfilter.cpp

http://commits.kde.org/kdepim/f104c7c54a06380ffc5fdc7d2a5b155ecd843b20
Comment 7 Laurent Montel 2011-09-14 15:02:44 UTC
I hope that it's fixed :)
If you see this error could you reopen a bug report please.
Thanks