Fix bug : Bug 230357 - Conditional jump or move depends on uninitialised value when editing filters

FIXED-IN: 4.7.2
BUG: 230357
(cherry picked from commit 2e998796c25c3486b4505eacd8e656bd6ef70114)